--- a/eye.css
+++ b/eye.css
@@ -34,6 +34,7 @@
 	
 	text-align: center;
 	vertical-align: middle;
+	visibility: hidden;
 }
 
 #counter {
@@ -69,7 +70,9 @@
 }
 
 /* runtime states */
-#frame[run] #counter {
+#frame[run] #counter,
+#frame[run] .right
+{
 	visibility: visible;
 }
 
